0.81_01
    New Features
    * Adam Kennedy bribed me to add new_ok().  The price was one DEFCON license key.
      [rt.cpan.org 8891]
    * TODO tests can now start and end with 'todo_start' and 'todo_end'
      Test::Builder methods. [rt.cpan.org 38018]
    * Added Test::Builder->in_todo() for a safe way to check if a test is inside a
      TODO block.  This allows TODO tests with no reason.

    Features Changed
    * Changed the message for extra tests run to show the number of tests run rather than
      the number extra to avoid the user having to do mental math.
      [rt.cpan.org 7022]    

    Bug fixes
    - using a relative path to perl broke tests              [rt.cpan.org 34050]
    - use_ok() broke $SIG{__DIE__} in the used module        [rt.cpan.org 34065]
    - diagnostics for isnt() were confusing on failure       [rt.cpan.org 33642]
    - warnings when MakeMaker's version contained _          [rt.cpan.org 33626]
    - add explicit test that non-integer plans die correctly [rt.cpan.org 28836]
      (Thanks to Hans Dieter Pearcey [confound] for fixing the above)
    - die if no_plan is given an argument                    [rt.cpan.org 27429]


0.80  Sun Apr  6 17:25:01 CEST 2008
    Test fixes
    - Completely disable the utf8 test.  It was causing perl to panic on some OS's.


0.79_01  Wed Feb 27 03:04:54 PST 2008
    Bug fixes
    - Let's try the IO layer copying again, this time with the test
      fixed for 5.10.


0.78  Wed Feb 27 01:59:09 PST 2008
    Bug fixes
    * Whoops, the version of Test::Builder::Tester got moved backwards.


0.77  Wed Feb 27 01:55:55 PST 2008
    Bug fixes
    - "use Test::Builder::Module" no longer sets exported_to() or does
      any other importing.
    - Fix the $TODO finding code so it can find $TODO without the benefit
      of exported_to(), which is often wrong.
    - Turn off the filehandle locale stuff for the moment, there's a 
      problem on 5.10.  We'll try it again next release.
      